# OpenGL-3D-FPS

./: .gitignore  CMakeLists.txt  README.md
game/: CMakeLists.txt  bullet.cpp  bullet.hpp  cubemap.cpp  cubemap.hpp  debug.cpp  debug.hpp  fpscamera.cpp  fpscamera.hpp  game.cpp  game.hpp  glshader.cpp  glshader.hpp  icamera.hpp  iweapon.cpp  iweapon.hpp  main.cpp  map.cpp  map.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  physics.cpp  physics.hpp  player.cpp  player.hpp  shadowmap.cpp  shadowmap.hpp  textrendering.cpp  textrendering.hpp  weapon_glock.cpp  weapon_glock.hpp
game/shaders/: fs_shader.glsl  fs_shadow_map.glsl  fs_skybox.glsl  fs_text_rendering.glsl  vs_shader.glsl  vs_shadow_map.glsl  vs_skybox.glsl  vs_text_rendering.glsl
gunsrcs/: bullet.blend  glock.blend
lib/x64/windows/: SDL2main.lib  assimp-vc143-mt.lib  freetype.lib
mapsrcs/: deathmatch.blend  deathmatch.blend1
server/: CMakeLists.txt  config.cpp  config.hpp  main.cpp  server.cpp  server.hpp  tcpserver.cpp  tcpserver.hpp
